# SPECTER

./: .clippy.toml  .gitignore  CONTRIBUTING.md  README.md  Yellow.md  railway.json  rustfmt.toml
.github/workflows/: frontend.yml  rust.yml  security-audit.yml
SPECTER-web/: .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
SPECTER-web/.vercel/: project.json
SPECTER-web/api/: og-pay.tsx  pay-meta.ts
SPECTER-web/public/: payment-asset.lottie
SPECTER-web/scripts/: test-yellow-flow.mjs
SPECTER-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
SPECTER-web/src/components/: StagingOnly.tsx  SuiWalletProvider.tsx  WalletProvider.tsx
SPECTER-web/src/hooks/: use-toast.ts  useApiHealth.ts  useEnsContentHash.ts  useEnsResolver.ts  useEnsTexts.ts  usePageTracking.ts  useYellow.ts
SPECTER-web/src/lib/: analytics.ts  api.ts  appEnv.ts  dotlottieWasm.ts  ensResolver.ts  ensSetText.ts  ensUtils.ts  feedback.ts  keyCrypto.ts  keyVault.ts  myPayNames.ts  nitroliteYellow.ts  payLink.ts  paymentHistory.ts  pendingPayment.ts  receiptCapture.ts  recentRecipients.ts  savedRequests.ts  setupProgress.ts  suinsResolver.ts  utils.ts  verifyTx.ts  viemClient.ts  walkthroughPrompt.ts  walkthroughVideo.ts  wallet.ts  yellowBalances.ts  yellowClient.ts  yellowService.ts
SPECTER-web/src/pages/: EnsManager.tsx  GenerateKeys.tsx  Index.tsx  InsightsPage.tsx  NotFound.tsx  PayPage.tsx  ScanPayments.tsx  SelfHost.tsx  SendPayment.tsx  TrustlessRecovery.tsx  UseCasesPage.tsx  YellowPage.tsx
SPECTER-web/src/test/: appEnv.test.ts  claim.test.ts  keyFile.test.ts  payLink.test.ts  paymentHistory.test.ts  pendingPayment.test.ts  recentRecipients.test.ts  savedRequests.test.ts  setupProgress.test.ts  utils.test.ts  walkthroughPrompt.test.ts
assets/: SPECTER_Pitch_Deck.pptx
docs/runbooks/: 2026-06-11-monad-reindex.md
event-poller/: .env.example  package-lock.json  package.json  tsconfig.json
event-poller/src/: index.ts
indexer/: .env.example  .gitignore  .nixpacks.toml  README.md  config.yaml  package.json  railway.json  schema.graphql  tsconfig.json  vitest.config.ts
indexer/abis/: SPECTERAnnouncer.json
indexer/queries/: latest_block.graphql  scan_by_block_range.graphql  scan_by_source_chain.graphql  scan_by_stealth_address.graphql  scan_by_view_tag.graphql  unsynced_turso.graphql
indexer/src/: EventHandlers.ts  calldata.ts  metadata.ts  retrySync.ts  turso.ts
scripts/: build-and-test.sh  e2e-stealth-flow.sh  interactive-ens-test.sh  rebuild-backend.sh
scripts/suins-test/: package-lock.json  package.json  run.mjs
specter/: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gcloudignore  Cargo.toml  Dockerfile  README.md  SPECTER_API.postman_collection.json  audit.toml  cheatsheet_specter.md  cloudbuild.yaml  railway.json  start.sh
specter-backend/: Cargo.toml
specter-backend/specter-cli/: Cargo.toml
specter-backend/specter-core/: Cargo.toml
specter-backend/specter-core/src/: constants.rs  error.rs  lib.rs  tests.rs  types.rs
specter-backend/specter-crypto/: Cargo.toml
specter-backend/specter-crypto/benches/: crypto_bench.rs
specter-backend/specter-crypto/src/: derive.rs  hash.rs  kyber.rs  lib.rs  view_tag.rs
specter-backend/specter-ens/: Cargo.toml
specter-backend/specter-keys/: Cargo.toml
specter-backend/specter-registry/: Cargo.toml
specter-backend/specter-scanner/: Cargo.toml
specter-backend/specter-stealth/: Cargo.toml
specter-backend/specter-yellow/: Cargo.toml
specter/examples/: yellow_private_trading.rs
specter/scripts/: check_backend.sh
specter/specter-api/: Cargo.toml
specter/specter-api/src/: dto.rs  error.rs  handlers.rs  lib.rs  middleware.rs  pending.rs  routes.rs  state.rs  verifier.rs
specter/specter-cache/: Cargo.toml
specter/specter-cache/src/: cache.rs  lib.rs
specter/specter-chain/: Cargo.toml
specter/specter-chain/src/: announcer.rs  calldata.rs  contract.rs  indexer.rs  lib.rs
specter/specter-chain/tests/: abi_decode.rs  integration_chain_metadata_announcement.rs
specter/specter-cli/: Cargo.toml
specter/specter-cli/src/: main.rs
specter/specter-core/: Cargo.toml
specter/specter-core/src/: constants.rs  error.rs  lib.rs  resolver.rs  traits.rs
specter/specter-core/src/types/: address.rs  announcement.rs  keys.rs  metadata.rs  mod.rs
specter/specter-core/tests/: integration_announcement_metadata.rs
specter/specter-crypto/: Cargo.toml
specter/specter-crypto/benches/: crypto_bench.rs
specter/specter-crypto/src/: db_keys.rs  derive.rs  hash.rs  kyber.rs  lib.rs  metadata.rs  view_tag.rs
specter/specter-ens/: Cargo.toml
specter/specter-ens/src/: cache.rs  ens.rs  ipfs.rs  lib.rs  resolver.rs
specter/specter-envio/: README.md  config.yaml  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  tsconfig.json
specter/specter-envio/abis/: SPECTERAnnouncer.json
specter/specter-envio/src/: EventHandlers.ts  metadata.ts  turso.ts
specter/specter-ipfs/: Cargo.toml
specter/specter-ipfs/src/: ipfs.rs  lib.rs
specter/specter-registry/: Cargo.toml  SQLITE_PERSISTENCE.md
specter/specter-registry/src/: file.rs  lib.rs  memory.rs
specter/specter-registry/src/sqlite/: mod.rs  registry.rs  scan.rs  schema.rs  yellow.rs
specter/specter-registry/src/turso/: mod.rs  pending.rs  registry.rs  scan.rs  schema.rs  sweeps.rs  yellow.rs
specter/specter-registry/tests/: integration_full_flow.rs  schema_v6.rs  schema_v7.rs
specter/specter-scanner/: Cargo.toml
specter/specter-scanner/src/: lib.rs
specter/specter-stealth/: Cargo.toml
specter/specter-stealth/src/: discovery.rs  lib.rs  payment.rs  wallet.rs
specter/specter-suins/: Cargo.toml
specter/specter-suins/src/: lib.rs  resolver.rs  suins.rs
specter/specter-yellow/: Cargo.toml
specter/specter-yellow/src/: channel.rs  client.rs  discovery.rs  lib.rs  settlement.rs  types.rs
usecases/: private-trading-yellow.md
(+146 files in other folders)
