
[workspace]
resolver = "2"
members = [
    "specter-core",
    "specter-crypto",
    "specter-keys",
    "specter-stealth",
    "specter-registry",
    "specter-scanner",
    "specter-ens",
    "specter-yellow",
    "specter-cli",
]

[workspace.dependencies]
# Post-Quantum Crypto
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Crypto Primitives
sha3 = "0.10"
aes-gcm = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }

# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
bs58 = "0.5"
chrono = "0.4"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
