[workspace]
resolver = "2"
members = [
    "specter-core",
    "specter-crypto",
    "specter-stealth",
    "specter-registry",
    "specter-scanner",
    "specter-ens",
    "specter-api",
    "specter-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SPECTER Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pranshu/specter"
description = "Post-quantum stealth address protocol for Ethereum"
keywords = ["ethereum", "privacy", "post-quantum", "stealth-address", "kyber"]
categories = ["cryptography", "blockchain"]

[workspace.dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
# POST-QUANTUM CRYPTOGRAPHY
# ═══════════════════════════════════════════════════════════════════════════════
# Using pqcrypto-kyber - bindings to reference C implementation (most battle-tested)
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# ═══════════════════════════════════════════════════════════════════════════════
# CRYPTOGRAPHIC PRIMITIVES
# ═══════════════════════════════════════════════════════════════════════════════
sha3 = "0.10"                    # SHAKE256 for view tags and key derivation
aes-gcm = "0.10"                 # Key encryption at rest
rand = "0.8"                     # Secure random number generation
rand_chacha = "0.3"              # ChaCha20 RNG for reproducible tests
subtle = "2.5"                   # Constant-time comparisons
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory clearing

# ═══════════════════════════════════════════════════════════════════════════════
# ETHEREUM & WEB3
# ═══════════════════════════════════════════════════════════════════════════════
alloy = { version = "0.3", features = ["full"] }  # Modern Ethereum library
ethers = { version = "2.0", features = ["abigen", "ws"] }  # Fallback for ENS

# ═══════════════════════════════════════════════════════════════════════════════
# SERIALIZATION
# ═══════════════════════════════════════════════════════════════════════════════
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"                  # Efficient binary serialization
hex = { version = "0.4", features = ["serde"] }
bs58 = "0.5"                     # Base58 encoding for display

# ═══════════════════════════════════════════════════════════════════════════════
# ASYNC RUNTIME
# ═══════════════════════════════════════════════════════════════════════════════
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# ═══════════════════════════════════════════════════════════════════════════════
# WEB API (Axum)
# ═══════════════════════════════════════════════════════════════════════════════
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# ═══════════════════════════════════════════════════════════════════════════════
# HTTP CLIENT (for IPFS, ENS resolution)
# ═══════════════════════════════════════════════════════════════════════════════
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# ═══════════════════════════════════════════════════════════════════════════════
# CLI
# ═══════════════════════════════════════════════════════════════════════════════
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"               # Progress bars
colored = "2.0"                  # Colored output
dialoguer = "0.11"               # Interactive prompts

# ═══════════════════════════════════════════════════════════════════════════════
# ERROR HANDLING & LOGGING
# ═══════════════════════════════════════════════════════════════════════════════
thiserror = "1.0"                # Derive Error trait
anyhow = "1.0"                   # Error context
tracing = "0.1"                  # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ═══════════════════════════════════════════════════════════════════════════════
# UTILITIES
# ═══════════════════════════════════════════════════════════════════════════════
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"             # Better mutexes
dashmap = "5.5"                  # Concurrent HashMap
bytes = "1.5"
url = "2.5"                      # URL parsing

# ═══════════════════════════════════════════════════════════════════════════════
# TESTING & BENCHMARKING
# ═══════════════════════════════════════════════════════════════════════════════
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.4"                 # Property-based testing
test-case = "3.3"                # Parameterized tests
tempfile = "3.10"                # Temporary files for testing
wiremock = "0.6"                 # HTTP mocking

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
