[package]
name = "specter-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
specter-core = { path = "../specter-core" }

pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false