[package]
name = "specter-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for SPECTER protocol"

[dependencies]
specter-core = { path = "../specter-core" }
specter-crypto = { path = "../specter-crypto" }
specter-stealth = { path = "../specter-stealth" }
specter-registry = { path = "../specter-registry" }
specter-scanner = { path = "../specter-scanner" }
specter-ens = { path = "../specter-ens" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
