[package]
name = "specter-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for SPECTER protocol"

[dependencies]
specter-core = { path = "../specter-core" }
specter-crypto = { path = "../specter-crypto" }
specter-stealth = { path = "../specter-stealth" }
specter-registry = { path = "../specter-registry", features = ["turso"] }
specter-scanner = { path = "../specter-scanner" }
specter-chain = { path = "../specter-chain" }
specter-ens = { path = "../specter-ens" }
specter-suins = { path = "../specter-suins" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Random
rand = { workspace = true }

# Security
governor = { workspace = true }
dashmap = { workspace = true }

# Pending payment IDs (binds /stealth/create → /registry/announcements)
uuid = { workspace = true }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
