[package]
name = "specter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, errors, and traits for SPECTER protocol"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Security
zeroize = { workspace = true }

# secp256k1 spending key (protocol v2): validates compressed public keys on-curve.
k256 = { version = "0.13", features = ["ecdsa"] }

# Async
async-trait = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
