[package]
name = "specter-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Post-quantum cryptographic operations for SPECTER (ML-KEM-768, SHAKE256)"

[dependencies]
specter-core = { path = "../specter-core" }

# Post-quantum cryptography
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

# Hashing
sha3 = { workspace = true }

# Security
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# Utilities
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand_chacha = { workspace = true }

