[package]
name = "specter-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Post-quantum cryptographic operations for SPECTER (ML-KEM-768, SHAKE256)"

[dependencies]
specter-core = { path = "../specter-core" }

# Post-quantum cryptography
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

# Hashing
sha3 = { workspace = true }

# Security
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# Utilities
hex = { workspace = true }

# Ethereum address from secp256k1 (so eth_private_key matches stealth_address)
k256 = { version = "0.13", features = ["ecdsa"] }

# Sui address from secp256k1 (blake2b-256 of scheme || compressed pubkey)
blake2 = "0.10"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand_chacha = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
