[package]
name = "specter-ens"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ENS resolution for SPECTER meta-addresses"

[dependencies]
specter-core = { path = "../specter-core" }
specter-ipfs = { path = "../specter-ipfs" }

# Ethereum
alloy = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Hashing
sha3 = { workspace = true }

# Content hash (EIP-1577)
cid = "0.11"
multihash = "0.19"

# URL parsing
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
