[package]
name = "specter-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Announcement registry storage for SPECTER"

[features]
default = []
turso = ["libsql", "lru", "hex"]
test-utils = ["turso", "libsql/core"]  # exposes new_test() and local SQLite setup

[dependencies]
specter-core = { path = "../specter-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Turso / libSQL (optional, behind "turso" feature)
libsql = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
# "core" adds local in-memory SQLite for tests (no network required)
libsql = { workspace = true, features = ["core"] }
# Integration tests use announcement_from_event from specter-chain
specter-chain = { path = "../specter-chain" }
# Integration tests use Address type from alloy
alloy = { workspace = true }

[[test]]
name = "integration_full_flow"
required-features = ["test-utils"]

[[test]]
name = "schema_v6"
required-features = ["turso"]
