[package]
name = "specter-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Efficient announcement scanning for SPECTER"

[dependencies]
specter-core = { path = "../specter-core" }
specter-crypto = { path = "../specter-crypto" }
specter-stealth = { path = "../specter-stealth" }
specter-registry = { path = "../specter-registry" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
