[package]
name = "specter-yellow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Yellow Network integration for SPECTER - Private state channel trading"

[dependencies]
specter-core = { path = "../specter-core" }
specter-crypto = { path = "../specter-crypto" }
specter-stealth = { path = "../specter-stealth" }
specter-registry = { path = "../specter-registry" }
specter-ens = { path = "../specter-ens" }

# Ethereum
ethers = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# WebSocket (for Yellow Node communication)
tokio-tungstenite = "0.21"

# HTTP
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Random
rand = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
